--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ title : XP订票助手
 keywords : 12306,订票,订票助手,XP订票助手
 description : XP订票助手是一个基于中国铁路客户服务中心网站的火车票预订客户端软件，为了解决网上订票难而设计开发。
 tagline: Site Tagline
+tip : 【XP订票助手】是一款免费软件，没有授权任何人以任何形式进行销售（如淘宝等）。软件的使用不收任何费用，目前只接受<a href="/donate.html" style="color:red;">捐赠</a>。如果您是从淘宝或任何第三方渠道购买的，请立刻申请退款！
 author :
   name : XPHelper
   email : xphelper@163.com
